# what-do

./: Cargo.toml  README.md  justfile
assets/: main.js
src/: app.rs  main.rs  room_state.rs  server_state.rs
src/pages/: error_page.rs  mod.rs  ranking_page.rs  results_page.rs  room_choice_page.rs  veto_page.rs
