[package]
name = "group-activity-decider-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
tokio = "1.28.2"
dioxus = "0.4.0"
dioxus-liveview = { version = "0.4.0", features = ["axum"] }
pretty_env_logger = "0.5.0"
axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view" }